[Issue #9] Fixes footnote positioning on small screens

--- a/styles/_littlefoot-content.scss
+++ b/styles/_littlefoot-content.scss
@@ -122,7 +122,7 @@
       }
 
       .littlefoot-footnote__wrapper {
-        margin: 0 0 0 50%;
+        margin: 0;
         max-width: 100% !important;
         transform: none;
         width: 100%;
